yamls/pipelines/jenkins/automation-demo1-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: automation-demo1-ingress-nginx
spec:
  ingressClassName: nginx
  tls:
    - secretName: automation-demo1-wildcard-vmlocal-co-in-tls

      hosts:
        - automation-demo1.vmlocal.co.in
  rules:
    - host: automation-demo1.vmlocal.co.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ansibledemo1-clusterip
                port:
                  number: 8080
